fixedalign

--- a/styles/style.css
+++ b/styles/style.css
@@ -300,7 +300,7 @@ nav a:hover {
     
     .footer-right {
         order: 3 !important;
-        margin-top: 0 !important;
+        margin-top: -5px !important;
     }
     
     .contact-items {
@@ -314,10 +314,14 @@ nav a:hover {
     .contact-item {
         margin: 0 !important;
         font-size: 0.8rem !important;
+        display: flex !important;
+        flex-direction: row !important;
+        align-items: center !important;
+        gap: 10px !important;
     }
     
     .contact-item:nth-child(1) {
-        margin-bottom: 8px !important;
+        margin-bottom: 3px !important;
     }
     
     .contact-item:nth-child(2) {
